--- a/src/components/Chat/ChatRoom.css
+++ b/src/components/Chat/ChatRoom.css
@@ -21,13 +21,15 @@
   height: '100vh';
   display: 'flex';
   align-items: 'center';
-  justify-content: 'center';  
+  justify-content: 'center';
   padding: 0;
 }
 .messagesBody {
-  width: 'calc( 100% - 20px )';
   margin: 10;
   padding: 6px;
+  min-height: 50vh;
+  max-height: 52vh;
   overflow-y: 'scroll';
-  height: 'calc( 100% - 80px )';
+  display: 'flex';
+  flex-direction: 'column-reverse';
 }
