update chat restructure

--- a/src/components/Chat/ChatRoom.css
+++ b/src/components/Chat/ChatRoom.css
@@ -29,7 +29,7 @@
   padding: 6px;
   min-height: 50vh;
   max-height: 52vh;
-  overflow-y: 'scroll';
-  display: 'flex';
-  flex-direction: 'column-reverse';
+  overflow-y: 'auto';
+  /* display: 'flex'; */
+  /* flex-direction: 'column-reverse'; */
 }
