--- a/src/components/Chat/Message.css
+++ b/src/components/Chat/Message.css
@@ -51,7 +51,7 @@
   width: 60%;
 
   text-align: left;
-  font: 400 .9em Open Sans; sans-serif;
+  font: 400 .9em Open Sans sans-serif;
   border: 1px solid #dfd087;
   border-radius: 10px;
 }
